business logic unit tests

--- a/src/main/resources/io/jmix/petclinic/messages_de.properties
+++ b/src/main/resources/io/jmix/petclinic/messages_de.properties
@@ -67,6 +67,7 @@ io.jmix.petclinic.entity.pet/Pet.type=Typ
 io.jmix.petclinic.entity.veterinarian/Tierarzt=Tierarzt
 io.jmix.petclinic.entity.veterinarian/Specialty=Spezialgebiete
 io.jmix.petclinic.entity.veterinarian/Tierarzt.specialties=Spezialgebiete
+io.jmix.petclinic.entity.veterinarian/Veterinarian.specialties=Spezialgebiete
 io.jmix.petclinic.entity.visit/VisitType.REGULAR_CHECKUP=Allgemeine Untersuchung
 io.jmix.petclinic.entity.visit/VisitType.RECHARGE=Aufladen
 io.jmix.petclinic.entity.visit/VisitType.STATUS_CONDITION_HEALING=Heilung
